# mtg-wishlist

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postcreate.sh
src/: app.py  app_test.py  binderpos_store.py  card.py  cliargs.py  main.py  renderer.py  store.py  stores.py  wishlist.py
src/cards/: card.py  wishlist.py
src/stores/: binderpos.py  mtgmate_scraper_helper.py  scraper.py  scraper_helper.py  search_spring.py  store.py  store_list.py
src/util/: cli_style.py  cliargs.py  fileio.py  output.py  string.py
tests/: wishlist_test.py
tests/cards/: wishlist_test.py
tests/stores/: mtgmate_scraper_helper_test.py  search_spring_test.py  searchspring_found.json
tests/util/: renderer_test.py
