[tool.poetry]
name = "mtg"
version = "0.1.0"
description = ""
authors = ["Kate Lanyon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
dataclasses-json = "^0.5.7"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
