[tool.poetry]
name = "mtg"
version = "0.1.0"
description = ""
authors = ["Kate Lanyon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pydantic = "^2.11.7"
lxml = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
lxml-stubs = "^0.5.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
