[tool.poetry]
name = "mtg"
version = "0.1.0"
description = ""
authors = ["Kate Lanyon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
pydantic = "^1.10.9"
lxml = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^7.3.1"
lxml-stubs = "^0.4.0"
pylint = "^3.3.7"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
